--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "start": "pm2 start ./pm2.json",
+    "start": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "so <so@redream.cn>",
