--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,4 @@ services:
     container_name: 'screenshot'
     image: 'squix78/puppeteer-screenshot'
     restart: unless-stopped
+    ports: 80:8555
