--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "so <so@redream.cn>",
   "license": "ISC",
   "dependencies": {
+    "bmp-js": "^0.1.0",
+    "bmp-ts": "^1.0.3",
     "boom": "^7.2.2",
     "debug": "^4.1.0",
     "jimp": "^0.9.3",
